@@ -1,3 +1,8 @@
+2006-11-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* contrib/shpgeo.c: Modified SHPProject to use pj_transform() so 
+	it works for datums and stuff.  Submitted by Steffen Macke.
+
 2006-09-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpeopen.c: (MLoskot) Added stronger test of Shapefile reading 
